updated small changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
 
 </head>
 
@@ -32,40 +32,40 @@
 
         </div>
         <div class="navbar-sec3">
-            <p>🌐 | ENG </p>
+            <button>🌐 | ENG </button>
             <button class="navbar-sec3__b2">Sign in</button>
         </div>
 
     </div>
-         <!-- Categories section -->
-    
-        <div class="stream1">
-            <label for="search all" class="stream1_toggle">
-                <i class="fa-solid fa-house"></i>
-                <span>Search All</span>
+    <!-- Categories section -->
 
-            </label>
-            <label for="hotels" class="">
-                <i class="fa-solid fa-bed"></i>
-                <span>Hotels</span>
-            </label>
-            <label>
-                <i class="fa-solid fa-camera"></i>
-                <span>Things to Do</span>
-            </label>
-            <label>
-                <i class="fa-solid fa-utensils"></i>
-                <span>Restaurant</span>
-            </label>
-            <label>
-                <i class="fa-solid fa-plane-departure"></i>
-                <span>Flights</span>
-            </label>
-            <label>
-                <i class="fa-solid fa-umbrella-beach"></i>
-                <span>Holiday Homes</span>
-            </label>
-        </div>
+    <div class="stream1">
+        <label for="search all" class="stream1_toggle">
+            <i class="fa-solid fa-house"></i>
+            <span>Search All</span>
+
+        </label>
+        <label for="hotels" class="">
+            <i class="fa-solid fa-bed"></i>
+            <span>Hotels</span>
+        </label>
+        <label>
+            <i class="fa-solid fa-camera"></i>
+            <span>Things to Do</span>
+        </label>
+        <label>
+            <i class="fa-solid fa-utensils"></i>
+            <span>Restaurant</span>
+        </label>
+        <label>
+            <i class="fa-solid fa-plane-departure"></i>
+            <span>Flights</span>
+        </label>
+        <label>
+            <i class="fa-solid fa-umbrella-beach"></i>
+            <span>Holiday Homes</span>
+        </label>
+    </div>
     <!-- Search section -->
     <div class="search">
         <i class="fa-solid fa-magnifying-glass"></i>
@@ -79,9 +79,9 @@
         <button class="part1-name"> @idevemohan </button>
         <div class="part1-line"></div>
         <div class="part1-title">
-           <h1>Book the best part of your trip</h1>
-           <p>Browse unforgettable things to do- right here.</p>
-           <button>Find things to do</button>
+            <h1>Book the best part of your trip</h1>
+            <p>Browse unforgettable things to do- right here.</p>
+            <button>Find things to do</button>
         </div>
     </div>
     <!-- Most Popular -->
@@ -108,77 +108,205 @@
             <h2>Water</h2>
         </div>
 
-</div>
+    </div>
 
-<!-- Ad section -->
- <div class="ad">
-    <img src="./ad.jpg">
+    <!-- Ad section -->
+    <div class="ad">
+        <img src="./ad.jpg">
 
- </div>
+    </div>
 
- <!-- Explore experiences in sikkim -->
-  <div class="exheader">
-    <h2>Explore experiences in sikkim</h2>
-    <p>Can't miss the beautiful sikkim!!</p>
-  </div>
-   
+    <!-- Explore experiences in sikkim -->
+    <div class="exheader">
+        <h2>Explore experiences in sikkim</h2>
+        <p>Can't miss the beautiful sikkim!!</p>
+    </div>
+
     <div class="explore">
-    <div class="explore-p1">
-        <img src="./tsomgolake.jfif">
-        <h3>Tsomgo Lake Tour</h3>
-        <p>A Glacial lake</p>
-        <p>5.0⭐⭐⭐⭐⭐(365)</p>
-        <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 5000 per adult</p>
+        <div class="explore-p1">
+            <img src="./tsomgolake.jfif">
+            <h3>Tsomgo Lake Tour</h3>
+            <p>A Glacial lake</p>
+            <p>5.0⭐⭐⭐⭐⭐(365)</p>
+            <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 5000 per adult</p>
+        </div>
+
+        <div class="explore-p2">
+            <img src="./lachentown.jfif">
+            <h3>Lachen Town Tour</h3>
+            <p> Serene Atmosphere</p>
+            <p>4.8⭐⭐⭐⭐(201)</p>
+            <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 1999 per adult</p>
+        </div>
+        <div class="explore-p3">
+            <img src="./ksunrise.jfif">
+            <h3>Kanchenjunga Tour</h3>
+            <p> Kanchenjunga Sunrise</p>
+            <p>4.8⭐⭐⭐⭐(250)</p>
+            <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 999 per adult</p>
+        </div>
+        <div class="explore-p4">
+            <img src="./buddhastatue.jfif">
+            <h3>Buddha Statue Tour</h3>
+            <p> Divine Experience</p>
+            <p>4.8⭐⭐⭐⭐(201)</p>
+            <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 799 per adult</p>
+        </div>
+
     </div>
+
+    <!-- Inspiration section -->
+
+    <div class="inspire">
+        <h2>Inspiration to get you explore!!</h2>
+        <div class="inspire-img-con">
+            <div class="inspire-sec1">
+                <img src="./aurora.jfif">
+                <p>Where to watch Aurora Borealis,Finland</p>
+                <!-- <p class="inspire-heart"><i class="fa-regular fa-heart"></i></p> -->
+            </div>
+            <div class="inspire-sec2">
+                <img src="./edinburgh.jfif">
+                <p>Edinburgh castle historic fortress</p>
+                <!-- <p class="inspire-heart"><i class="fa-regular fa-heart"></i></p> -->
+            </div>
+            <div class="inspire-sec3">
+                <img src="./foodtrip.jfif">
+                <p>To Explore local cuisine</p>
+                <!-- <p class="inspire-heart"><i class="fa-regular fa-heart"></i></p> -->
+            </div>
+        </div>
+    </div>
+
+    <!-- Things to do section -->
+    <div class="things-sec">
+        <div class="things-sec__title">
+            <h2>Things to do- right now!</h2>
+            <p>Seasonal favs you don't want miss!!</p>
+        </div>
+        <div class="things-sec__places">
+            <div class="things-sec__place1">
+                <img src="./things1.jfif">
+                <p class="p1">Belgium</p>
+                <h4>A trip to belgium offers medieval charm</h4>
+                <p>4.9⭐⭐⭐⭐(217)</p>
+                <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 1,50000 per adult</p>
+            </div>
+            <div class="things-sec__place2">
+                <img src="./things2.jfif">
+                <p class="p1">Egypt</p>
+                <h4>Iconic Landmarks,Rich Culture herritage</h4>
+                <p>4.5⭐⭐⭐⭐(400)</p>
+                <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 90000 per adult</p>
+            </div>
+            <div class="things-sec__place3">
+                <img src="./things3.jfif">
+                <p class="p1">Kerala</p>
+                <h4>God's own country,Unique geographical features</h4>
+                <p>4.9⭐⭐⭐⭐(217)</p>
+                <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 10000 per adult</p>
+            </div>
+            <div class="things-sec__place4">
+                <img src="./things4.jfif">
+                <p class="p1">South Korea</p>
+                <h4>Technological advancement,pop culture</h4>
+                <p>5.0⭐⭐⭐⭐(1345)</p>
+                <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 2,00,000 per adult</p>
+            </div>
+        </div>
+    </div>
+    <div class="iconic">
+        <div class="iconic-title">
+            <h2>Iconic places you need to see <i class="fa-solid fa-location-dot"></i></h2>
+        </div>
+        <div class="iconic-images">
+            <div class="iconic-images__img">
+                <img src="./iconic1.jfif">
+                <h3>Cliffs,Ireland</h3>
+            </div>
+            <div class="iconic-images__img">
+                <img src="./iconic2.jfif">
+                <h3>Madeira,Portugal</h3>
+            </div>
+            <div class="iconic-images__img">
+                <img src="./iconic3.jfif">
+                <h3>Greatwall,China</h3>
+            </div>
+            <div class="iconic-images__img">
+                <img src="./iconic4.jfif">
+                <h3>Sydney,Australia</h3>
+            </div>
+        </div>
+
+
+    </div>
+
+    <!-- Traveller's Choice Section -->
+    <div class="emptybox">
+        <div class="emptybox-sec1">
+            <img src="./tripadvisor.png">
+            <h1>Traveller's choice Awards best of the best</h1>
+            <p>See the Winners</p>
+        </div>
+        <div class="emptybox-sec2">
+            <img src="./emptyimg.png">
+        </div>
+    </div>
+ 
+    <!-- About Us section -->
+<div class="footer">
+    <div class="footer-sec">
+         <div class="footer-sec1">
+        <h4>About Tripadvisor</h4>
+        <p>About Us</p>
+        <p>Press</p>
+        <p>Resources & Policies</p>
+        <p>Career</p>
+        <p>Trust & Safety</p>
+        <p>Contact Us</p>
+      </div>
+    <div class="footer-sec2">
+        <h4>Explore</h4>
+        <p>Write a review</p>
+        <p>Add a place</p>
+        <p>Join</p>
+        <p>Traveller's choice</p>
+        <p>Help center</p>
+
+    </div>
+     <div class="footer-sec3">
+        <h4>Do Business with us</h4>
+        <p>Owners & Membership</p>
+        <p>Business Advantage</p>
+     </div>
+     <div class="footer-sec4">
+        <h4>Get the app</h4>
+        <p>iphone App</p>
+        <p>Android App</p>
+     </div>
+     <div class="footer-sec5">
+        <h4>Tripadvisor Websites</h4>
+        <p>Book tours and attraction tickets on Viator</p>
+     </div>
+    </div>
+    <div class="footer-tail">
+      <img src="./tripadvisor.png">
     
-    <div class="explore-p2">
-        <img src="./lachentown.jfif">
-        <h3>Lachen Town Tour</h3>
-        <p> Serene Atmosphere</p>
-        <p>4.8⭐⭐⭐⭐(201)</p>
-        <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 1999 per adult</p>
+    <div class="footer-tail1">
+        <p>&copy; 2025 Tripadvisor LLC  All rights reserved.</p>
+        <p>Terms of Use </p>  <p> Privacy and Cookies Statement</p>
     </div>
-    <div class="explore-p3">
-        <img src="./ksunrise.jfif">
-        <h3>Kanchenjunga Tour</h3>
-        <p> Kanchenjunga Sunrise</p>
-        <p>4.8⭐⭐⭐⭐(250)</p>
-        <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 999 per adult</p>
+    <div class="footer-tail2">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-pinterest"></i>
+        <i class="fa-brands fa-twitter"></i>
     </div>
-    <div class="explore-p4">
-        <img src="./buddhastatue.jfif">
-        <h3>Buddha Statue Tour</h3>
-        <p> Divine Experience</p>
-        <p>4.8⭐⭐⭐⭐(201)</p>
-        <p>From <i class="fa-solid fa-indian-rupee-sign"></i> 799 per adult</p>
     </div>
-
 </div>
-
-<!-- Inspiration section -->
- <h1>Inspiration to get you Explore!</h1>
- <div class="inspire">
-    <div class="inspire-sec1">
-        <img src="./aurora.jfif">
-         <p>Where to watch Aurora Borealis</p>
-    </div>
-    <div class="inspire-sec2">
-        <img src="./aurora.jfif">
-         <p>Where to watch Aurora Borealis</p>
-    </div>
-    <div class="inspire-sec3">
-        <img src="./aurora.jfif">
-         <p>Where to watch Aurora Borealis</p>
-    </div>
-
-
-
- </div>
-
-
 
 
 
 </body>
-</html>
 
+</html>
