updated selection input

--- a/index.html
+++ b/index.html
@@ -38,33 +38,53 @@
 
     </div>
     <!-- Categories section -->
+    <div class="stream-bloc">
+        <!-- Hidden Inputs -->
+        <input type="radio" name="stream1" id="searchall" checked hidden>
+        <input type="radio" name="stream1" id="hotels" hidden>
+        <input type="radio" name="stream1" id="things" hidden>
+        <input type="radio" name="stream1" id="restaurant" hidden>
+        <input type="radio" name="stream1" id="flights" hidden>
+        <input type="radio" name="stream1" id="holiday" hidden>
 
-    <div class="stream1">
-        <label for="search all" class="stream1_toggle">
-            <i class="fa-solid fa-house"></i>
-            <span>Search All</span>
+        <div class="stream-visual">
+            <div class="stream">
+                <h1 class="where">Where to? <i class="fa-solid fa-location-dot"></i></h1>
+                <h1 class="stay">Stay somewhere great.. 🏨</h1>
+                <h1 class="fun">Do something fun! 🥳</h1>
+                <h1 class="eat">Find Places to eat 🍜</h1>
+                <h1 class="flight">Find the best Flight ✈️</h1>
+                <h1 class="rent">Explore places to stay 🏕️</h1>
+            </div>
 
-        </label>
-        <label for="hotels" class="">
-            <i class="fa-solid fa-bed"></i>
-            <span>Hotels</span>
-        </label>
-        <label>
-            <i class="fa-solid fa-camera"></i>
-            <span>Things to Do</span>
-        </label>
-        <label>
-            <i class="fa-solid fa-utensils"></i>
-            <span>Restaurant</span>
-        </label>
-        <label>
-            <i class="fa-solid fa-plane-departure"></i>
-            <span>Flights</span>
-        </label>
-        <label>
-            <i class="fa-solid fa-umbrella-beach"></i>
-            <span>Holiday Homes</span>
-        </label>
+            <div class="stream1">
+                <label for="searchall" class="stream1_toggle">
+                    <i class="fa-solid fa-house"></i>
+                    <span>Search All</span>
+
+                </label>
+                <label for="hotels" class="stream1_toggle">
+                    <i class="fa-solid fa-bed"></i>
+                    <span>Hotels</span>
+                </label>
+                <label for="things" class="stream1_toggle">
+                    <i class="fa-solid fa-camera"></i>
+                    <span>Things to Do</span>
+                </label>
+                <label for="restaurant" class="stream1_toggle">
+                    <i class="fa-solid fa-utensils"></i>
+                    <span>Restaurant</span>
+                </label>
+                <label for="flights" class="stream1_toggle">
+                    <i class="fa-solid fa-plane-departure"></i>
+                    <span>Flights</span>
+                </label>
+                <label for="holiday" class="stream1_toggle" >
+                    <i class="fa-solid fa-umbrella-beach"></i>
+                    <span>Holiday Homes</span>
+                </label>
+            </div>
+        </div>
     </div>
     <!-- Search section -->
     <div class="search">
@@ -252,58 +272,59 @@
             <img src="./emptyimg.png">
         </div>
     </div>
- 
-    <!-- About Us section -->
-<div class="footer">
-    <div class="footer-sec">
-         <div class="footer-sec1">
-        <h4>About Tripadvisor</h4>
-        <p>About Us</p>
-        <p>Press</p>
-        <p>Resources & Policies</p>
-        <p>Career</p>
-        <p>Trust & Safety</p>
-        <p>Contact Us</p>
-      </div>
-    <div class="footer-sec2">
-        <h4>Explore</h4>
-        <p>Write a review</p>
-        <p>Add a place</p>
-        <p>Join</p>
-        <p>Traveller's choice</p>
-        <p>Help center</p>
 
+    <!-- About Us section -->
+    <div class="footer">
+        <div class="footer-sec">
+            <div class="footer-sec1">
+                <h4>About Tripadvisor</h4>
+                <p>About Us</p>
+                <p>Press</p>
+                <p>Resources & Policies</p>
+                <p>Career</p>
+                <p>Trust & Safety</p>
+                <p>Contact Us</p>
+            </div>
+            <div class="footer-sec2">
+                <h4>Explore</h4>
+                <p>Write a review</p>
+                <p>Add a place</p>
+                <p>Join</p>
+                <p>Traveller's choice</p>
+                <p>Help center</p>
+
+            </div>
+            <div class="footer-sec3">
+                <h4>Do Business with us</h4>
+                <p>Owners & Membership</p>
+                <p>Business Advantage</p>
+            </div>
+            <div class="footer-sec4">
+                <h4>Get the app</h4>
+                <p>iphone App</p>
+                <p>Android App</p>
+            </div>
+            <div class="footer-sec5">
+                <h4>Tripadvisor Websites</h4>
+                <p>Book tours and attraction tickets on Viator</p>
+            </div>
+        </div>
+        <div class="footer-tail">
+            <img src="./tripadvisor.png">
+
+            <div class="footer-tail1">
+                <p>&copy; 2025 Tripadvisor LLC All rights reserved.</p>
+                <p>Terms of Use </p>
+                <p> Privacy and Cookies Statement</p>
+            </div>
+            <div class="footer-tail2">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-pinterest"></i>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+        </div>
     </div>
-     <div class="footer-sec3">
-        <h4>Do Business with us</h4>
-        <p>Owners & Membership</p>
-        <p>Business Advantage</p>
-     </div>
-     <div class="footer-sec4">
-        <h4>Get the app</h4>
-        <p>iphone App</p>
-        <p>Android App</p>
-     </div>
-     <div class="footer-sec5">
-        <h4>Tripadvisor Websites</h4>
-        <p>Book tours and attraction tickets on Viator</p>
-     </div>
-    </div>
-    <div class="footer-tail">
-      <img src="./tripadvisor.png">
-    
-    <div class="footer-tail1">
-        <p>&copy; 2025 Tripadvisor LLC  All rights reserved.</p>
-        <p>Terms of Use </p>  <p> Privacy and Cookies Statement</p>
-    </div>
-    <div class="footer-tail2">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-pinterest"></i>
-        <i class="fa-brands fa-twitter"></i>
-    </div>
-    </div>
-</div>
 
 
 
