--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
         </div>
         <div class="navbar-sec3">
+               
             <button>🌐 | ENG </button>
             <button class="navbar-sec3__b2">Sign in</button>
         </div>
@@ -318,10 +319,16 @@
                 <p> Privacy and Cookies Statement</p>
             </div>
             <div class="footer-tail2">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-pinterest"></i>
-                <i class="fa-brands fa-twitter"></i>
+              <a href="https://www.facebook.com/Tripadvisor/"><i class="fa-brands fa-facebook"
+                                style="color: #000000;"></i></a>
+                        <a href="https://www.facebook.com/Tripadvisor/"><i class="fa-brands fa-x-twitter"
+                                style="color: #000000;"></i></i></a>
+                        <a href="https://www.instagram.com/tripadvisor/"><i class="fa-brands fa-instagram"
+                                style="color: #000000;"></i></a>
+                        <a href="https://www.youtube.com/TripAdvisor"><i class="fa-brands fa-youtube"
+                                style="color: #000000;"></i></a>
+
+
             </div>
         </div>
     </div>
