updated mobile view

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
     </div>
     <!-- Search section -->
     <div class="search">
-        <i class="fa-solid fa-magnifying-glass"></i>
-        <input placeholder="Trip to Madeira">
+        <div><i class="fa-solid fa-magnifying-glass"></i></div>
+         <input placeholder="Trip to Madeira">
         <button>Search</button>
     </div>
 
     <!-- Animation picture section -->
     <div class="part1">
-        <img src="./part1.webp">
+        <img src="./part1.webp" >
         <button class="part1-name"> @idevemohan </button>
         <div class="part1-line"></div>
         <div class="part1-title">
@@ -125,7 +125,7 @@
             <h2>Culture</h2>
         </div>
         <div class="part2-section__img">
-            <img src="./water.jfif">
+            <img src="./water.jfif" width="292px" height="192px">
             <h2>Water</h2>
         </div>
 
